<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListadoLibrosActivity">

    <TextView
        android:id="@+id/tvTituloListado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/titulolistadolibros"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgLeidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:checkedButton="@id/rbTodosLeidos"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloListado">

        <RadioButton
            android:id="@+id/rbLeido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="recargarLibros"
            android:text="@string/leidos" />

        <RadioButton
            android:id="@+id/rbNoLeidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:onClick="recargarLibros"
            android:text="@string/noleidos" />

        <RadioButton
            android:id="@+id/rbTodosLeidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="recargarLibros"
            android:text="@string/todosleidos" />
    </RadioGroup>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/botonvolver"
        android:onClick="volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ListView
        android:id="@+id/lvLibros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgLeidos" />
</androidx.constraintlayout.widget.ConstraintLayout>